user stuff worky

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
-BETTER_AUTH_SECRET="supermegasecret"
+AUTH_SECRET="supermegasecret"
 PUBLIC_BASE_URL="http://localhost:5173"
-OIDC_PROVIDER_ID="some-id"
 OIDC_CLIENT_ID="client-id"
 OIDC_CLIENT_SECRET="client-secret"
-OIDC_DISCOVERY_URL="https://auth.authentik.com/application/o/perplexideez/.well-known/openid-configuration"
-OIDC_SCOPES="openid profile email"
+OIDC_ISSUER="https://auth.authentik.com/application/o/perplexideez/.well-known/openid-configuration"
+OIDC_SCOPES="openid email profile"
 PUBLIC_OIDC_NAME="Name Shown in the UI"
