--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/svelte-query": "^5.59.17",
     "@trpc/client": "^10.45.2",
     "@types/html-to-text": "^9.0.4",
+    "@types/moment": "^2.13.0",
     "@types/pdf-parse": "^1.1.4",
     "autoprefixer": "^10.4.20",
     "bits-ui": "1.0.0-next.40",
@@ -32,7 +33,9 @@
     "embla-carousel-svelte": "^8.3.1",
     "formsnap": "2.0.0-next.1",
     "lucide-svelte": "^0.454.0",
+    "marked": "^14.1.4",
     "mode-watcher": "^0.4.1",
+    "moment": "^2.30.1",
     "paneforge": "1.0.0-next.1",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.6",
