handle faster generation better

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,23 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
+
 AUTH_SECRET="supermegasecret"
 PUBLIC_BASE_URL="http://localhost:5173"
+
 OIDC_CLIENT_ID="client-id"
 OIDC_CLIENT_SECRET="client-secret"
 OIDC_ISSUER="https://auth.authentik.com/application/o/perplexideez/.well-known/openid-configuration"
 OIDC_SCOPES="openid email profile"
 PUBLIC_OIDC_NAME="Name Shown in the UI"
-REDIS_URL="redis://localhost:6379/0"
+
 OLLAMA_URL="http://localhost:11434"
 SEARXNG_URL="http://localhost:5174"
+
 LLM_SPEED_MODEL="gemma2:2b"
 LLM_BALANCED_MODEL="llama3.1:latest"
 LLM_QUALITY_MODEL="llama3.1:latest"
 LLM_EMBEDDINGS_MODEL="nomic-embed-text:latest"
+LLM_TITLE_MODEL="qwen2.5:32b"
+LLM_EMOJI_MODEL="llama3.1:latest"
+
+LOG_LEVEL="info"
+METRICS_PORT="9001"
