--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "prisma": "^5.21.1",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "svelte-meta-tags": "^4.0.4",
     "svelte-sonner": "^0.3.28",
     "sveltekit-superforms": "^2.20.0",
     "tailwind-merge": "^2.5.4",
@@ -68,8 +69,12 @@
     "compute-dot": "^1.1.0",
     "html-to-text": "^9.0.5",
     "langchain": "^0.3.5",
+    "ollama": "^0.5.9",
     "open-graph-scraper": "^6.8.2",
     "pdf-parse": "^1.1.1",
+    "pino": "^9.5.0",
+    "pino-pretty": "^12.1.0",
+    "prom-client": "^15.1.3",
     "svelte-markdown": "^0.4.1",
     "trpc-sveltekit": "^3.6.2"
   }
