--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ OIDC_ISSUER="https://auth.authentik.com/application/o/perplexideez/.well-known/o
 OIDC_SCOPES="openid email profile"
 PUBLIC_OIDC_NAME="Name Shown in the UI"
 
+LLM_MODE="ollama"
+OPENAI_BASE_URL=""
+OPENAI_API_KEY=""
 OLLAMA_URL="http://localhost:11434"
 SEARXNG_URL="http://localhost:5174"
 
