update env example to be more informative

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ OIDC_ISSUER="https://auth.authentik.com/application/o/perplexideez/.well-known/o
 OIDC_SCOPES="openid email profile"
 PUBLIC_OIDC_NAME="Name Shown in the UI"
 
+# LLM_MODE="ollama" or "openai"
 LLM_MODE="ollama"
 OPENAI_BASE_URL=""
 OPENAI_API_KEY=""
