--- a/.env.example
+++ b/.env.example
@@ -24,4 +24,6 @@ LLM_TITLE_MODEL="qwen2.5:32b"
 LLM_EMOJI_MODEL="llama3.1:latest"
 
 LOG_LEVEL="info"
+# LOG_MODE="json" or "pretty"
+LOG_MODE="json"
 METRICS_PORT="9001"
