test chart deploy

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -14,6 +14,7 @@ on:
       - "prisma/**"
       - "static/**"
       - ".gitignore"
+      - ".github/workflows/build-push.yaml"
   workflow_dispatch:
 
 jobs:
