just use the right one trust

--- a/.github/workflows/publish-helm.yaml
+++ b/.github/workflows/publish-helm.yaml
@@ -102,6 +102,6 @@ jobs:
           mkdir -p .cr-index
           owner=$(cut -d '/' -f 1 <<< '${{ github.repository }}')
           repo=$(cut -d '/' -f 2 <<< '${{ github.repository }}')
-          cr index --git-repo "charts" --owner "brunostjohn" --pages-branch '${{ env.CHART_REPO_BRANCH }}' \
+          cr index --git-repo "charts" --owner "brunostjohn" \
             --package-path '../${{ steps.package.outputs.dir }}' \
             --index-path .cr-index --push
