--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "runed": "^0.15.3",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "svelte-media-queries": "^1.6.2",
     "svelte-meta-tags": "^4.0.4",
     "svelte-sonner": "^0.3.28",
     "sveltekit-superforms": "^2.20.0",
