yeah this is much closer

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ LLM_QUALITY_MODEL="llama3.1:latest"
 LLM_EMBEDDINGS_MODEL="nomic-embed-text:latest"
 LLM_TITLE_MODEL="qwen2.5:32b"
 LLM_EMOJI_MODEL="llama3.1:latest"
+LLM_IMAGE_SEARCH_MODEL="llama3.1:latest"
+LLM_VIDEO_SEARCH_MODEL="llama3.1:latest"
 
 LOG_LEVEL="info"
 # LOG_MODE="json" or "pretty"
