--- a/package.json
+++ b/package.json
@@ -64,9 +64,12 @@
     "@langchain/ollama": "^0.1.1",
     "@langchain/openai": "^0.3.11",
     "@prisma/client": "^5.21.1",
+    "@resvg/resvg-js": "^2.6.2",
     "@trpc/server": "^10.45.2",
     "compute-cosine-similarity": "^1.1.0",
     "compute-dot": "^1.1.0",
+    "cuid": "^3.0.0",
+    "emojiimages": "^1.2.1",
     "html-to-text": "^9.0.5",
     "langchain": "^0.3.5",
     "ollama": "^0.5.9",
@@ -75,6 +78,8 @@
     "pino": "^9.5.0",
     "pino-pretty": "^12.1.0",
     "prom-client": "^15.1.3",
+    "satori": "^0.11.3",
+    "satori-html": "^0.3.2",
     "svelte-markdown": "^0.4.1",
     "trpc-sveltekit": "^3.6.2"
   }
