get started on password login

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=publ
 
 AUTH_SECRET="supermegasecret"
 PUBLIC_BASE_URL="http://localhost:5173"
+DISABLE_PASSWORD_LOGIN="true"
+DISABLE_SIGN_UP="true"
 
 OIDC_CLIENT_ID="client-id"
 OIDC_CLIENT_SECRET="client-secret"
