implement user/pwd auth

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ AUTH_SECRET="supermegasecret"
 PUBLIC_BASE_URL="http://localhost:5173"
 DISABLE_PASSWORD_LOGIN="true"
 DISABLE_SIGN_UP="true"
+RATE_LIMIT_SECRET="supermegasecret"
 
 OIDC_CLIENT_ID="client-id"
 OIDC_CLIENT_SECRET="client-secret"
