--- a/deploy/kubernetes/perplexideez/Chart.yaml
+++ b/deploy/kubernetes/perplexideez/Chart.yaml
@@ -5,3 +5,13 @@ description: A Helm chart for Perplexideez
 type: application
 version: 0.1.1
 appVersion: "1.0.1"
+
+dependencies:
+  - name: postgres
+    version: 16.2.1
+    repository: https://charts.bitnami.com/bitnami
+    condition: postgres.enabled
+  - name: searxng
+    version: 1.0.0
+    repository: https://charts.searxng.org
+    condition: searxng.enabled
