--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/svelte-query": "^5.59.17",
+    "@tanstack/table-core": "^8.20.5",
     "@trpc/client": "^10.45.2",
     "@types/html-to-text": "^9.0.4",
     "@types/pdf-parse": "^1.1.4",
@@ -77,6 +78,7 @@
     "langchain": "^0.3.5",
     "ollama": "^0.5.9",
     "open-graph-scraper": "^6.8.2",
+    "openai": "^4.72.0",
     "pdf-parse": "^1.1.1",
     "pino": "^9.5.0",
     "pino-pretty": "^12.1.0",
